--- a/public/css/wu-kan.css
+++ b/public/css/wu-kan.css
@@ -3,33 +3,45 @@
     max-width: 42rem;
   }
 }
+
 @media (min-width: 96em) {
   .container {
     max-width: 48rem;
   }
 }
+
 body {
-  background-image: url(https://i0.hdslb.com/bfs/article/48da202712ab6ecafee518dbaab7dd05f7de92eb.jpg);
+  background-image: url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1578654716012&di=cc4e610b87102a8f898d527a19a6362a&imgtype=0&src=http%3A%2F%2Fb-ssl.duitang.com%2Fuploads%2Fitem%2F201712%2F07%2F20171207160905_QaHz3.jpeg);
   background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
   font-family: Menlo, Monaco, "Courier New", Microsoft JhengHei, monospace;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Menlo, Monaco, "Courier New", Microsoft JhengHei, monospace;
 }
+
 pre {
   max-height: 50vh;
   overflow: auto;
 }
+
 .content {
-  background-color: rgba(255,255,255,.4);
+  background-color: rgba(255, 255, 255, .4);
   box-shadow: 0 0 1rem #fff;
 }
+
 .masthead {
   margin-bottom: 0rem;
   border-bottom-width: 0px;
 }
+
 #rewardButton {
   background-color: #ec6149;
   border-radius: 4px;
@@ -40,38 +52,47 @@ pre {
   padding: 0.5rem 1rem;
   border-width: 0px;
 }
+
 #rewardQRs {
   display: none;
   border-width: 0px;
 }
+
 .reward_qr {
   border-width: 0px;
 }
+
 .sidebar {
   font-family: Menlo, Monaco, "Courier New", Microsoft JhengHei Light, monospace;
 }
+
 .sidebar-social {
   text-align: center;
   font-size: .7rem;
 }
+
 .sidebar-social a:hover,
 .sidebar-social a:focus {
   text-decoration: none;
-  background-color: rgba(255,255,255,.1);
+  background-color: rgba(255, 255, 255, .1);
 }
+
 /* Hide the sidebar checkbox that we toggle with `.sidebar-toggle` */
 .sidebar-checkbox {
   display: none;
 }
+
 .sidebar-toggle {
   position: fixed;
 }
+
 .sidebar-toggle:before,
 .sidebar-toggle:active:before,
-#sidebar-checkbox:focus ~ .sidebar-toggle:before,
-#sidebar-checkbox:checked ~ .sidebar-toggle:before {
+#sidebar-checkbox:focus~.sidebar-toggle:before,
+#sidebar-checkbox:checked~.sidebar-toggle:before {
   background-image: none;
 }
+
 /*头像效果-start*/
 .ih-item.circle.effect {
   margin: 0 auto;
@@ -79,12 +100,14 @@ pre {
   -moz-perspective: 900px;
   perspective: 900px;
 }
+
 .ih-item.circle.effect .img {
   z-index: 11;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
 }
+
 .ih-item.circle.effect .info {
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
@@ -92,12 +115,14 @@ pre {
   -o-transform-style: preserve-3d;
   transform-style: preserve-3d;
 }
+
 .ih-item.circle.effect .info .info-back {
   opacity: 1;
   border-radius: 50%;
   width: 100%;
   height: 100%;
 }
+
 .ih-item.circle.effect.bottom_to_top .img {
   -webkit-transform-origin: 50% 0;
   -moz-transform-origin: 50% 0;
@@ -105,6 +130,7 @@ pre {
   -o-transform-origin: 50% 0;
   transform-origin: 50% 0;
 }
+
 .ih-item.circle.effect.bottom_to_top a:hover .img {
   -webkit-transform: rotate3d(1, 0, 0, 180deg);
   -moz-transform: rotate3d(1, 0, 0, 180deg);
@@ -112,6 +138,7 @@ pre {
   -o-transform: rotate3d(1, 0, 0, 180deg);
   transform: rotate3d(1, 0, 0, 180deg);
 }
+
 .ih-item.circle.effect.top_to_bottom .img {
   -webkit-transform-origin: 50% 100%;
   -moz-transform-origin: 50% 100%;
@@ -119,6 +146,7 @@ pre {
   -o-transform-origin: 50% 100%;
   transform-origin: 50% 100%;
 }
+
 .ih-item.circle.effect.top_to_bottom a:hover .img {
   -webkit-transform: rotate3d(1, 0, 0, -180deg);
   -moz-transform: rotate3d(1, 0, 0, -180deg);
@@ -126,6 +154,7 @@ pre {
   -o-transform: rotate3d(1, 0, 0, -180deg);
   transform: rotate3d(1, 0, 0, -180deg);
 }
+
 .ih-item.circle.effect.left_to_right .img {
   -webkit-transform-origin: 100% 50%;
   -moz-transform-origin: 100% 50%;
@@ -133,6 +162,7 @@ pre {
   -o-transform-origin: 100% 50%;
   transform-origin: 100% 50%;
 }
+
 .ih-item.circle.effect.left_to_right a:hover .img {
   -webkit-transform: rotate3d(0, 1, 0, 180deg);
   -moz-transform: rotate3d(0, 1, 0, 180deg);
@@ -140,6 +170,7 @@ pre {
   -o-transform: rotate3d(0, 1, 0, 180deg);
   transform: rotate3d(0, 1, 0, 180deg);
 }
+
 .ih-item.circle.effect.right_to_left .img {
   -webkit-transform-origin: 0% 50%;
   -moz-transform-origin: 0% 50%;
@@ -147,6 +178,7 @@ pre {
   -o-transform-origin: 0% 50%;
   transform-origin: 0% 50%;
 }
+
 .ih-item.circle.effect.right_to_left a:hover .img {
   -webkit-transform: rotate3d(0, 1, 0, -180deg);
   -moz-transform: rotate3d(0, 1, 0, -180deg);
@@ -154,25 +186,30 @@ pre {
   -o-transform: rotate3d(0, 1, 0, -180deg);
   transform: rotate3d(0, 1, 0, -180deg);
 }
+
 .ih-item a:hover {
   text-decoration: none;
 }
+
 .ih-item img {
   width: 100%;
   height: 100%;
 }
+
 .ih-item.circle {
   position: relative;
   width: 120px;
   height: 120px;
   border-radius: 50%;
 }
+
 .ih-item.circle .img {
   position: relative;
   width: 120px;
   height: 120px;
   border-radius: 50%;
 }
+
 .ih-item.circle .img:before {
   position: absolute;
   display: block;
@@ -184,9 +221,11 @@ pre {
   -moz-transition: all 0.35s ease-in-out;
   transition: all 0.35s ease-in-out;
 }
+
 .ih-item.circle .img img {
   border-radius: 50%;
 }
+
 .ih-item.circle .info {
   position: absolute;
   top: 0;
@@ -198,19 +237,22 @@ pre {
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 }
+
 @media all and (max-width: 780px) {
- .ih-item.circle .img {
+  .ih-item.circle .img {
     position: relative;
     width: 100px;
     height: 100px;
     /*margin-top: 20px;*/
     border-radius: 50%;
-}
-.ih-item.circle {
+  }
+
+  .ih-item.circle {
     position: relative;
     width: 100px;
     height: 100px;
     border-radius: 50%;
+  }
 }
-}
+
 /*头像效果-end*/
